--- a/src/com/mypos/cashier/view/CashierPanel.form
+++ b/src/com/mypos/cashier/view/CashierPanel.form
@@ -56,9 +56,9 @@
                   <Component id="jTextField1" min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="jButton1" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="287" max="-2" attributes="0"/>
-              <EmptySpace pref="234" max="32767" attributes="0"/>
+              <EmptySpace pref="249" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -69,16 +69,16 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="CASHIER"/>
+        <Property name="text" type="java.lang.String" value="Cashier"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="cc" red="cc" type="rgb"/>
+          <Color blue="ff" green="99" red="99" type="rgb"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="66" red="66" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Input barcode..."/>
       </Properties>
@@ -104,7 +104,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/image/icons8-admin-24.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="ADMIN"/>
+        <Property name="text" type="java.lang.String" value="Admin "/>
         <Property name="horizontalTextPosition" type="int" value="2"/>
       </Properties>
     </Component>
@@ -132,10 +132,9 @@
         <Component class="javax.swing.JTable" name="jTable2">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="6">
+              <Table columnCount="4" rowCount="6">
                 <Column editable="true" title="Id Product" type="java.lang.Object"/>
                 <Column editable="true" title="Name Product" type="java.lang.Object"/>
-                <Column editable="true" title="Price" type="java.lang.Object"/>
                 <Column editable="true" title="Quantity" type="java.lang.Object"/>
                 <Column editable="true" title="Line Total" type="java.lang.Object"/>
               </Table>
